--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,19 @@
 .main-container {
-    border: 1px solid red;
+    /* border: 1px solid red; */
+    position: relative;
 }
 
 .container {
-    border: 1px solid green;
+    /* border: 1px solid green; */
+}
+
+@media only screen and (min-width: 768px) {
+    
+}
+
+@media only screen and (min-width: 1025px) {
+    .main-container {
+        display: grid;
+        grid-template-columns: 260px 1fr;
+    }
 }
