--- a/src/app/shared/components/navbar/navbar.component.css
+++ b/src/app/shared/components/navbar/navbar.component.css
@@ -1,3 +1,38 @@
 .navbar {
-    border: 1px solid purple;
+    padding: 10px;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.3), 0 2px 4px -1px rgba(0, 0, 0, 0.03);
 }
+
+@media only screen and (min-width: 768px) {
+}
+
+@media only screen and (min-width: 1025px) {
+    .navbar {
+        padding: 20px;
+    }
+
+    .navbar__icon {
+        display: none;
+    }
+
+    .form__group {
+        position: relative;
+    }
+    
+    .form__icon-search {
+        position: absolute;
+        top: 12px;
+        left: 10px;
+    }
+    
+    .form__control {
+        width: 100%;
+        border: none;
+        border-radius: 5px;
+        padding: 10px 10px 10px 35px;
+        background-color: #2b2b30;
+        color: #fff;
+        outline: none;
+        font-family: 'Inter', sans-serif;
+    }
+} 
