--- a/src/app/shared/components/sidebar/sidebar.component.css
+++ b/src/app/shared/components/sidebar/sidebar.component.css
@@ -1,3 +1,116 @@
+.sidebar {
+    width: 100%;
+    height: 100%;
+    background-color: #141419;
+    position: fixed;
+    top: 0;
+    left: -2000px;
+    z-index: 10000;
+    transition: .3s ease all;
+}
+
+.sidebar.active {
+    width: 80%;
+    left: 0;
+}
+
+.sidebar__body {
+    padding: 0 10px 10px 10px;
+    position: absolute;
+    top: 80px; bottom: 0; left: 0; right: 0;
+    overflow: auto;
+}
+
+.sidebar__body::-webkit-scrollbar {
+    width: 3px;
+    border-radius: 5px;
+    background-color: transparent;
+}
+
+.sidebar__body::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: #c0c0c0;
+}
+
+.sidebar__section {
+    color: #cc4785;
+    font-weight: 600;
+}
+
+.menu {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.menu--scroll::-webkit-scrollbar {
+    width: 3px;
+    border-radius: 5px;
+    background-color: transparent;
+}
+
+.menu--scroll::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: #c0c0c0;
+}
+
+.menu__item {
+    padding: 12px 10px;
+    outline: none;
+    cursor: pointer;
+    border-radius: 3px;
+    transition: .2s ease all;
+}
+
+.menu__item:hover {
+    background: #2b2b30;
+}
+
+.menu__item.active {
+    background-color: #2b2b30;
+}
+
 .app-title {
+    margin: 0;
+    padding: 30px 10px;
+    color: #fff;
     font-family: 'Prosto One', cursive;
+}
+
+.overlay {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    display: none;
+    top: 0; right: 0; bottom: 0; left: 0;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 2;
+}
+
+.overlay.active {
+    display: block;
+}
+
+@media only screen and (min-width: 1025px) {
+    .sidebar {
+        position: unset;
+        width: 260px;
+    }
+
+    .sidebar__body {
+        width: inherit;
+        height: auto;
+    }
+
+    .fixed {
+        padding: 0 10px 0px 10px;
+        position: fixed;
+        width: inherit;
+        top: 0px; left: 0;
+    }
+
+    .menu--scroll {
+        height: 550px;
+        overflow-y: auto;
+    }
 }
