--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,19 +1,57 @@
-<div class="sidebar">
-    <h1 class="app-title">
-        cinema
-    </h1>
-
-    <ul>
-        <li [routerLink]="['/browse', 'popular']">popular</li>
-        <li [routerLink]="['/browse', 'top_rated']">top rated</li>
-        <li [routerLink]="['/browse', 'upcoming']">upcoming</li>
-    </ul>
-
-    <ul>
-        <li *ngFor="let movieGenre of movieGenres"
-            [routerLink]="['/genres', movieGenre.name]">
-            {{ movieGenre.name }}
-        </li>
-    </ul>
+<div class="overlay" [class.active]="isMenuOpen"></div>
+<div class="sidebar"
+[class.active]="isMenuOpen">
+    <div class="sidebar__top">
+        <h1 class="app-title">
+            cinema
+        </h1>
+    </div>
+    <div class="sidebar__body">
+        <p class="sidebar__section">
+            Browse
+        </p>
+        <ul class="menu">
+            <li class="menu__item"
+            [routerLink]="['/browse', 'popular']"
+            routerLinkActive="active"
+            (click)="isMenuOpen = !isMenuOpen">
+                <a class="menu__link">
+                    Popular
+                </a>
+            </li>
+            <li class="menu__item"
+            [routerLink]="['/browse', 'top_rated']"
+            routerLinkActive="active"
+            (click)="isMenuOpen = !isMenuOpen">
+                <a class="menu__link">
+                    Top Rated
+                </a>
+            </li>
+            <li class="menu__item"
+            [routerLink]="['/browse', 'upcoming']"
+            routerLinkActive="active"
+            (click)="isMenuOpen = !isMenuOpen">
+                <a class="menu__link">
+                    Upcoming
+                </a>
+            </li>
+        </ul>
+        <div [class.fixed]="isFixed">
+            <p class="sidebar__section">
+                Genres
+            </p>
+            <ul class="menu"
+            [ngClass]="{ 'menu--scroll' : isMenuScroll && isFixed }">
+                <li class="menu__item"
+                [routerLink]="['/genres', movieGenre.name]"
+                *ngFor="let movieGenre of movieGenres"
+                routerLinkActive="active"
+                (click)="isMenuOpen = !isMenuOpen">
+                    <a class="menu__link">
+                        {{ movieGenre.name }}
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
 </div>
-<!-- <p>sidebar works!</p> -->
