--- a/src/app/shared/components/footer/footer.component.css
+++ b/src/app/shared/components/footer/footer.component.css
@@ -1,10 +1,16 @@
 .footer {
+    padding: 10px;
     font-size: 14px;
-    padding: 20px 0;
 }
 
 @media only screen and (min-width: 768px) {
     .footer {
         font-size: 16px;
+    }
+}
+
+@media only screen and (min-width: 1025px) {
+    .footer {
+        padding: 20px;
     }
 }
