--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,34 +1,49 @@
-<div class="navbar">
+<div class="navbar"
+    [class.navbar--sticky]="isNavbarSticky">
     <div class="row row--flex row--flex-align-center row--flex-space-between">
         <div class="col col--flex">
-            <span class="navbar__icon pointer"
+            <span class="material-icons navbar__icon pointer"
                 (click)="sendIsOpen();">
-                <svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-list" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" d="M2.5 11.5A.5.5 0 0 1 3 11h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 3h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
-                </svg>
+                menu
             </span>
         </div>
         <div class="col col--flex">
-            <span class="navbar__icon">
-                <svg width="1.3em" height="1.3em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
-                    <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
-                </svg>
+            <span class="material-icons navbar__icon pointer"
+                (click)="isOpenSearchBar = true;">
+                search
             </span>
-            <form class="form">
+            <div class="form form--desktop">
+                <div class="form__group form__group--desktop">
+                    <span class="material-icons form__icon">
+                        search
+                    </span>
+                    <input
+                        type="text"
+                        class="form__control form__control--desktop"
+                        #searchValue
+                        placeholder="Search movie"
+                        (keyup.enter)="goToSearch(searchValue.value); searchValue.value = '';"/>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="search"
+    [class.search--open]="isOpenSearchBar">
+        <div class="row row--flex row--flex-align-center">
+            <span class="material-icons pointer"
+            (click)="isOpenSearchBar = false;">
+                navigate_before
+            </span>
+            <div class="form">
                 <div class="form__group">
-                    <!-- <span class="form__icon">
-                        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
-                            <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
-                        </svg>
-                    </span> -->
                     <input
                         type="text"
                         class="form__control"
-                        placeholder="Search a movie">
+                        #searchValue
+                        placeholder="Search movie"
+                        (keyup.enter)="goToSearch(searchValue.value); searchValue.value = '';"/>
                 </div>
-            </form>
+            </div>
         </div>
     </div>
 </div>
