--- a/src/app/shared/components/sidebar/sidebar.component.css
+++ b/src/app/shared/components/sidebar/sidebar.component.css
@@ -1,6 +1,6 @@
 .sidebar {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: #141419;
     position: fixed;
     top: 0;
@@ -19,6 +19,7 @@
     position: absolute;
     top: 80px; bottom: 0; left: 0; right: 0;
     overflow: auto;
+    transition: .2s ease all;
 }
 
 .sidebar__body::-webkit-scrollbar {
@@ -41,17 +42,6 @@
     margin: 0;
     padding: 0;
     list-style: none;
-}
-
-.menu--scroll::-webkit-scrollbar {
-    width: 3px;
-    border-radius: 5px;
-    background-color: transparent;
-}
-
-.menu--scroll::-webkit-scrollbar-thumb {
-    border-radius: 5px;
-    background-color: #c0c0c0;
 }
 
 .menu__item {
@@ -84,7 +74,7 @@
     display: none;
     top: 0; right: 0; bottom: 0; left: 0;
     background-color: rgba(0, 0, 0, 0.6);
-    z-index: 2;
+    z-index: 200;
 }
 
 .overlay.active {
@@ -93,24 +83,15 @@
 
 @media only screen and (min-width: 1025px) {
     .sidebar {
-        position: unset;
+        position: sticky;
         width: 260px;
     }
 
     .sidebar__body {
-        width: inherit;
-        height: auto;
+        overflow: hidden;
     }
 
-    .fixed {
-        padding: 0 10px 0px 10px;
-        position: fixed;
-        width: inherit;
-        top: 0px; left: 0;
-    }
-
-    .menu--scroll {
-        height: 550px;
+    .sidebar__body:hover {
         overflow-y: auto;
     }
 }
