--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -1,1 +1,12 @@
-<p>search works!</p>
+<div class="page">
+    <div class="page__header">
+        <h2>
+            Results for:
+            <span class="search-value">
+                {{ searchValue }}
+            </span>
+        </h2>
+    </div>
+    <div class="page__body"></div>
+    <div class="page__footer"></div>
+</div>
