--- a/src/app/pages/movie/movie.component.css
+++ b/src/app/pages/movie/movie.component.css
@@ -3,8 +3,8 @@
     flex-direction: column;
     justify-content: space-between;
     width: 100%;
-    height: 500px;
-    min-height: 430px;
+    height: 550px;
+    /* min-height: 430px; */
     padding: 10px 10px 20px 10px;
     background: rgba(0, 0, 0, 0.8);
     background-position: center center;
@@ -23,42 +23,12 @@
 .movie__details {
     display: grid;
     grid-template-columns: 1fr;
-    row-gap: 10px;
+    row-gap: 20px;
     padding: 10px;
 }
 
 .movie__recommendations {
     padding: 0 10px;
-}
-
-.btn {
-    display: block;
-    border: none;
-    background-color: #d7d7d7;
-    color: #fff;
-    padding: 14px 16px;
-    width: 100%;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 30px;
-    cursor: pointer;
-    outline: none;
-}
-
-.btn--black {
-    background-color: #545460;
-}
-
-.btn--pink {
-    background-color: #cc4785;
-}
-
-.btn--ml-20 {
-    margin-left: 20px;
-}
-
-.btn--mb-10 {
-    margin-bottom: 10px;
 }
 
 .movie__raiting--desktop {
