--- a/src/app/shared/components/cards/cards.component.html
+++ b/src/app/shared/components/cards/cards.component.html
@@ -16,10 +16,12 @@
         </div>
         <div class="card__footer">
             <div class="row row--flex row--flex-align-center row--flex-space-between">
-                <span class="card__badge">
+                <span class="card__badge"
+                *ngIf="movie.release_date">
                     {{ movie.release_date | date: 'yyyy' }}
                 </span>
-                <div class="row row--flex row--flex-align-center">
+                <div class="row row--flex row--flex-align-center"
+                *ngIf="movie.vote_average > 0">
                     <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-suit-heart-fill" fill="#cc4785" xmlns="http://www.w3.org/2000/svg">
                         <path d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1z"/>
                     </svg>
