--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,1 +1,18 @@
-<p>not-found works!</p>
+<div class="page">
+    <div class="page__body">
+        <h2 class="not-found-title">
+            404
+        </h2>
+        <p>
+            Oops, Page not found
+        </p>
+        <a href="/" class="btn btn--pink btn--width">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-left" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
+            </svg>
+            <span style="margin-left: 5px;">
+                Go Back
+            </span>
+        </a>
+    </div>
+</div>
