--- a/src/app/shared/components/cards/cards.component.html
+++ b/src/app/shared/components/cards/cards.component.html
@@ -6,7 +6,7 @@
             <img
                 loading="lazy"
                 class="card__image"
-                [src]="movie | nomovieposter"
+                [src]="movie | noMoviePoster"
                 [alt]="movie.title">
         </div>
         <div class="card__body">
