--- a/src/app/pages/person/person.component.css
+++ b/src/app/pages/person/person.component.css
@@ -35,12 +35,10 @@
     }
 
     .person__grid {
-        grid-template-columns: 1fr 2fr;
+        grid-template-columns: 400px 1fr;
     }
-}
 
-@media only screen and (min-width: 1280px) {
     .btn--width {
-        width: 50%;
+        width: 280px;
     }
 }
