--- a/src/app/shared/components/footer/footer.component.css
+++ b/src/app/shared/components/footer/footer.component.css
@@ -1,6 +1,10 @@
 .footer {
-    padding: 10px;
+    padding: 20px 10px;
     font-size: 14px;
+}
+
+.btn--pxy {
+    padding: 8px 10px;
 }
 
 @media only screen and (min-width: 768px) {
