--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,20 +1,24 @@
 <div class="footer">
     <div class="row row--flex row--flex-space-between">
-        <div class="col col--flex col--flex-align-center pointer">
-            <span class="material-icons">
-                chevron_left
-            </span>
-            <p>
-                Previous
-            </p>
+        <div class="col">
+            <a href="" class="btn btn--pink btn--pxy">
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-left" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
+                </svg>
+                <span style="margin-left: 5px;">
+                    Previous
+                </span>
+            </a>
         </div>
-        <div class="col col--flex col--flex-align-center pointer">
-            <p>
-                Next
-            </p>
-            <span class="material-icons">
-                chevron_right
-            </span>
+        <div class="col">
+            <a href="" class="btn btn--pink btn--pxy">
+                <span style="margin-right: 5px">
+                    Next
+                </span>
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-right" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+                </svg>
+            </a>
         </div>
     </div>
 </div>
