--- a/src/styles.css
+++ b/src/styles.css
@@ -17,13 +17,11 @@ html {
 }
 
 html::-webkit-scrollbar {
-    width: 3px;
-    border-radius: 5px;
+    width: 8px;
     background-color: transparent;
 }
 
 html::-webkit-scrollbar-thumb {
-    border-radius: 5px;
     background-color: #c0c0c0;
 }
 
@@ -98,7 +96,9 @@ body {
 /* button styles
 ---------------- */
 .btn {
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border: none;
     background-color: #d7d7d7;
     color: #fff;
@@ -106,7 +106,7 @@ body {
     width: 100%;
     text-align: center;
     text-decoration: none;
-    border-radius: 30px;
+    border-radius: 5px;
     cursor: pointer;
     outline: none;
 }
