--- a/src/app/pages/person/person.component.html
+++ b/src/app/pages/person/person.component.html
@@ -71,6 +71,6 @@
         </div>
     </div>
     <div class="page__footer">
-        <app-footer></app-footer>
+        <app-footer [page]="page" [totalPages]="totalPages"></app-footer>
     </div>
 </div>
