--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -44,7 +44,7 @@
             [routerLink]="['/genres', movieGenre.name]"
             *ngFor="let movieGenre of movieGenres"
             routerLinkActive="active"
-            (click)="isMenuOpen = !isMenuOpen">
+            (click)="isMenuOpen = !isMenuOpen; sendGenreId(movieGenre);">
                 <a class="menu__link">
                     {{ movieGenre.name }}
                 </a>
