--- a/src/app/pages/genres/genres.component.html
+++ b/src/app/pages/genres/genres.component.html
@@ -8,6 +8,6 @@
         <app-cards [movies]="movies"></app-cards>
     </div>
     <div class="page__footer">
-        <app-footer></app-footer>
+        <app-footer [page]="page" [totalPages]="totalPages"></app-footer>
     </div>
 </div>
