--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -14,7 +14,7 @@
                 search_off
             </span>
             <h2>
-                Sorry, no results for 
+                Sorry, no results for
                 <span class="search-value">
                     {{ searchValue }}
                 </span>
@@ -22,8 +22,7 @@
         </div>
         <app-cards [movies]="movies" *ngIf="movies.length > 0"></app-cards>
     </div>
-    <div class="page__footer"
-    *ngIf="movies.length > 0">
-        <app-footer></app-footer>
+    <div class="page__footer">
+        <app-footer [page]="page" [totalPages]="totalPages"></app-footer>
     </div>
 </div>
