--- a/src/app/pages/person/person.component.html
+++ b/src/app/pages/person/person.component.html
@@ -51,10 +51,19 @@
                             No bio available
                         </small>
                     </div>
-                    <div class="row"
-                    *ngIf="person.homepage">
+                    <div class="row row--custom">
+                        <a class="btn btn--black"
+                        (click)="back();">
+                            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-left" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
+                            </svg>
+                            <span style="margin-left: 5px;">
+                                Back
+                            </span>
+                        </a>
                         <a
-                            class="btn btn--pink btn--width"
+                            *ngIf="person.homepage"
+                            class="btn btn--pink"
                             target="blank"
                             [href]="person.homepage">
                             Website
